fix gap change to margin

--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -218,3 +218,64 @@ $mainFont: "Manrope", sans-serif !important;
 .bgWhite {
   background: $whiteColor;
 }
+
+.text-title {
+  font-size: 18px;
+  color: $darkColor;
+}
+
+.text-success {
+  color: green;
+}
+
+.text-danger {
+  color: red;
+}
+
+.mb-3 {
+  margin-bottom: 15px;
+}
+
+.mt-3 {
+  margin-top: 15px;
+}
+
+.mr-3 {
+  margin-right: 15px;
+}
+
+.ml-3 {
+  margin-left: 15px;
+}
+
+.mb-2 {
+  margin-bottom: 10px;
+}
+
+.mt-2 {
+  margin-top: 10px;
+}
+
+.mr-2 {
+  margin-right: 10px;
+}
+
+.ml-2 {
+  margin-left: 10px;
+}
+
+.mb-1 {
+  margin-bottom: 5px;
+}
+
+.mt-1 {
+  margin-top: 5px;
+}
+
+.mr-1 {
+  margin-right: 5px;
+}
+
+.ml-1 {
+  margin-left: 5px;
+}
